objects/Production_Estimate_Temp_Line_Items__c/Production_Estimate_Temp_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Production Estimate Temp Line Items</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Production Estimate Temp Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>