objects/Production_Estimate_Temp_Line_Items__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>B&amp;W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>