objects/Production_Estimate_Temp_Line_Items__c/fields/EachQtyUpforUsed__c.field-meta.xml
<CustomField>
    <fullName>EachQtyUpforUsed__c</fullName>
    <label>EachQtyUpforUsed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>