objects/Production_Estimate_Temp_Line_Items__c/fields/Material_Item__c.field-meta.xml
<CustomField>
    <fullName>Material_Item__c</fullName>
    <label>Material Item</label>
    <referenceTo>Material_Item__c</referenceTo>
    <relationshipLabel>Production Estimate Temp Line Items</relationshipLabel>
    <relationshipName>Production_Estimate_Temp_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>