objects/Production_Estimate_Temp_Line_Items__c/fields/Production_Estimate_Template__c.field-meta.xml
<CustomField>
    <fullName>Production_Estimate_Template__c</fullName>
    <label>Production Estimate Template</label>
    <referenceTo>Production_Estimate_Template__c</referenceTo>
    <relationshipLabel>Production Estimate Temp Line Items</relationshipLabel>
    <relationshipName>Production_Estimate_Temp_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>