objects/Production_Estimate_Temp_Line_Items__c/fields/Qty_Up__c.field-meta.xml
<CustomField>
    <fullName>Qty_Up__c</fullName>
    <label>Qty Up</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>