objects/Production_Estimate_Temp_Line_Items__c/fields/Qty_Used__c.field-meta.xml
<CustomField>
    <fullName>Qty_Used__c</fullName>
    <formula>IF(ISPICKVAL( Calc_Unit__c , &quot;Sheet&quot;), 

IF(Qty_Up__c &lt;&gt; 0, SheetQtyUpforUsed__c, 

IF(ISPICKVAL( Sided__c , &quot;Double&quot;),(Quantity__c * of_Pages__c )/2, 

Quantity__c * of_Pages__c )), 

IF( AND(Qty_Up__c &lt;&gt; 0,ISPICKVAL( Calc_Unit__c , &quot;Each&quot;)) , EachQtyUpforUsed__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>