objects/Production_Estimate_Temp_Line_Items__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Production Estimate Temp Line Items</relationshipLabel>
    <relationshipName>Production_Estimate_Temp_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>